Correct paragraph spacing

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
 }
 
 h1 {
-  font-family: Sigmar One, cursive;
+  font-family: "Sigmar One", cursive;
   color: #b20953;
   font-size: 3rem;
   text-align: center;
@@ -22,14 +22,12 @@ h1 {
   border-radius: 4px;
 }
 
-
-
 body {
   margin: 0;
 }
 
 body p {
-  padding: .75em;
+  padding: 0;
   color: #2f2d13;
 }
 
@@ -70,7 +68,7 @@ header {
 }
 
 h2 {
-  font-family: Sigmar One, cursive;
+  font-family: "Sigmar One", cursive;
   color: #b20953;
   font-size: 1.875rem;
   margin: .3em;
